upload tag image webapp feature added

--- a/Web Server/email.ini
+++ b/Web Server/email.ini
@@ -3,5 +3,5 @@ username='fakedummymail12345@gmail.com'
 password='imypcgekfzftpjqn'
 
 [azure]
-subscription_key='893e776d-9182-4926-9d74-e3e079667cc5'
-endpoint='https://anantcomputervisioninstance.cognitiveservices.azure.com/'
+subscription_key=22cb64fb5bca4b03b9828b9dfb5effb3
+endpoint=https://anantcomputervisioninstance2.cognitiveservices.azure.com/
